--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,156 @@
-Flask
-google-cloud-speech
-google-cloud-texttospeech
-grpcio
+aio-pika==6.8.2
+aiormq==3.3.1
+alembic==1.10.4
+anyio==3.6.2
+asgiref==3.6.0
+attrs==23.1.0
+azure-ai-formrecognizer==3.3.0b1
+azure-common==1.1.28
+azure-core==1.26.4
+backoff==2.2.1
+beautifulsoup4==4.11.2
+blinker==1.6.2
+blis==0.7.9
+bs4==0.0.1
+catalogue==2.0.8
+certifi==2022.12.7
+charset-normalizer==3.0.1
+click==8.1.3
+cloudpickle==2.2.1
+confection==0.0.4
+construct==2.5.3
+contourpy==1.0.7
+cycler==0.11.0
+cymem==2.0.7
+databricks-cli==0.17.6
+DateTime==5.0
+decouple==0.0.7
+deeppavlov==1.1.1
+dill==0.3.6
+Django==4.1.7
+docker==6.0.1
+docopt==0.6.2
+elasticsearch==7.17.9
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl#sha256=0964370218b7e1672a30ac50d72cdc6b16f7c867496f1d60925691188f4d2510
+entrypoints==0.4
+farm-haystack==1.14.0
+fastapi==0.77.1
+filelock==3.9.1
+Flask==2.3.2
+fonttools==4.39.3
+fsspec==2023.4.0
+future==0.18.3
+gitdb==4.0.10
+GitPython==3.1.31
+greenlet==2.0.2
+gunicorn==20.1.0
+h11==0.14.0
+haystack==0.42
+huggingface-hub==0.14.1
+idna==3.4
+importlib-metadata==6.6.0
+inflect==6.0.4
+interchange==2021.0.4
+isodate==0.6.1
+itsdangerous==2.1.2
+jarowinkler==1.2.3
+Jinja2==3.1.2
+joblib==1.2.0
+jsonschema==4.17.3
+kiwisolver==1.4.4
+langcodes==3.3.0
+langdetect==1.0.9
+lxml==4.9.2
+Mako==1.2.4
+Markdown==3.4.3
+MarkupSafe==2.1.2
+matplotlib==3.7.1
+mlflow==2.3.1
+mmh3==3.1.0
+monotonic==1.6
+more-itertools==9.1.0
+mpmath==1.3.0
+msrest==0.7.1
+multidict==6.0.4
+murmurhash==1.0.9
+networkx==3.0
+nltk==3.8.1
+num2words==0.5.12
+numpy==1.23.5
+oauthlib==3.2.2
+overrides==4.1.2
+packaging==23.0
+pamqp==2.3.0
+pandas==1.5.3
+pansi==2020.7.3
+pathy==0.10.1
+pefile==2023.2.7
+Pillow==9.5.0
+posthog==3.0.1
+preshed==3.0.8
+prometheus-client==0.14.1
+protobuf==3.20.2
+pvporcupine @ file:///Users/jordisaleilles/porcupine/binding/python
+py2neo==2021.2.3
+pyArango==2.0.1
+pyarrow==11.0.0
+pybind11==2.2.4
+pydantic==1.10.5
+Pygments==2.14.0
+PyJWT==2.6.0
+pyparsing==3.0.9
+pyrsistent==0.19.3
+python-dateutil==2.8.2
+python-docx==0.8.11
+python-dotenv==1.0.0
+python-ptrace==0.9.8
+pytz==2022.7.1
+PyYAML==6.0
+quantulum3==0.8.1
+querystring-parser==1.2.4
+rank-bm25==0.2.2
+rapidfuzz==2.7.0
+regex==2022.10.31
+requests==2.28.2
+requests-oauthlib==1.3.1
+scikit-learn==1.0.2
+scipy==1.9.3
+sentence-transformers==2.2.2
+sentencepiece==0.1.99
+seqeval==1.2.2
+six==1.16.0
+smart-open==6.3.0
+smmap==5.0.0
+sniffio==1.3.0
+soupsieve==2.4
+spacy==3.5.0
+spacy-legacy==3.0.12
+spacy-loggers==1.0.4
+SQLAlchemy==2.0.12
+sqlparse==0.4.3
+srsly==2.4.6
+starlette==0.19.1
+sympy==1.11.1
+tabulate==0.9.0
+tenacity==8.2.2
+thinc==8.1.8
+threadpoolctl==3.1.0
+tika==2.6.0
+tiktoken==0.3.3
+tokenizers==0.13.3
+torch==2.0.0
+torchvision==0.15.1
+tqdm==4.64.1
+transformers==4.25.1
+typer==0.7.0
+typing-utils==0.1.0
+typing_extensions==4.5.0
+urllib3==1.26.14
+uvicorn==0.18.3
+wasabi==1.1.1
+websocket-client==1.5.1
+Werkzeug==2.3.3
+Whoosh==2.7.4
+yarl==1.9.2
+zipp==3.15.0
+zope.interface==5.5.2
