--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ blis==0.7.9
 bs4==0.0.1
 catalogue==2.0.8
 certifi==2022.12.7
+cffi==1.15.1
 charset-normalizer==3.0.1
 click==8.1.3
 cloudpickle==2.2.1
@@ -56,6 +57,7 @@ itsdangerous==2.1.2
 jarowinkler==1.2.3
 Jinja2==3.1.2
 joblib==1.2.0
+Js2Py==0.74
 jsonschema==4.17.3
 kiwisolver==1.4.4
 langcodes==3.3.0
@@ -86,6 +88,7 @@ pansi==2020.7.3
 pathy==0.10.1
 pefile==2023.2.7
 Pillow==9.5.0
+pipwin==0.5.2
 posthog==3.0.1
 preshed==3.0.8
 prometheus-client==0.14.1
@@ -96,16 +99,21 @@ pyArango==2.0.1
 pyarrow==11.0.0
 PyAudio==0.2.13
 pybind11==2.2.4
+pycparser==2.21
 pydantic==1.10.5
 Pygments==2.14.0
+pyjsparser==2.7.1
 PyJWT==2.6.0
 pyparsing==3.0.9
+PyPrind==2.11.3
 pyrsistent==0.19.3
+pySmartDL==1.3.4
 python-dateutil==2.8.2
 python-docx==0.8.11
 python-dotenv==1.0.0
 python-ptrace==0.9.8
 pytz==2022.7.1
+pytz-deprecation-shim==0.1.0.post0
 PyYAML==6.0
 quantulum3==0.8.1
 querystring-parser==1.2.4
@@ -123,6 +131,7 @@ six==1.16.0
 smart-open==6.3.0
 smmap==5.0.0
 sniffio==1.3.0
+sounddevice==0.4.6
 soupsieve==2.4
 spacy==3.5.0
 spacy-legacy==3.0.12
@@ -146,6 +155,8 @@ transformers==4.25.1
 typer==0.7.0
 typing-utils==0.1.0
 typing_extensions==4.5.0
+tzdata==2023.3
+tzlocal==4.3
 urllib3==1.26.14
 uvicorn==0.18.3
 wasabi==1.1.1
