--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 aio-pika==6.8.2
+aiohttp==3.8.4
 aiormq==3.3.1
+aiosignal==1.3.1
 alembic==1.10.4
 anyio==3.6.2
 asgiref==3.6.0
+async-timeout==4.0.2
 attrs==23.1.0
 azure-ai-formrecognizer==3.3.0b1
 azure-common==1.1.28
@@ -12,6 +15,7 @@ beautifulsoup4==4.11.2
 blinker==1.6.2
 blis==0.7.9
 bs4==0.0.1
+cachetools==5.3.0
 catalogue==2.0.8
 certifi==2022.12.7
 cffi==1.15.1
@@ -39,11 +43,20 @@ fastapi==0.77.1
 filelock==3.9.1
 Flask==2.3.2
 fonttools==4.39.3
+frozenlist==1.3.3
 fsspec==2023.4.0
 future==0.18.3
 gitdb==4.0.10
 GitPython==3.1.31
+google-api-core==2.11.0
+google-auth==2.17.3
+google-cloud==0.34.0
+google-cloud-speech==2.19.0
+google-cloud-texttospeech==2.14.1
+googleapis-common-protos==1.59.0
 greenlet==2.0.2
+grpcio==1.54.0
+grpcio-status==1.54.0
 gunicorn==20.1.0
 h11==0.14.0
 haystack==0.42
@@ -71,6 +84,7 @@ mlflow==2.3.1
 mmh3==3.1.0
 monotonic==1.6
 more-itertools==9.1.0
+MouseInfo==0.1.3
 mpmath==1.3.0
 msrest==0.7.1
 multidict==6.0.4
@@ -80,6 +94,7 @@ nltk==3.8.1
 num2words==0.5.12
 numpy==1.23.5
 oauthlib==3.2.2
+openai==0.27.6
 overrides==4.1.2
 packaging==23.0
 pamqp==2.3.0
@@ -92,25 +107,156 @@ pipwin==0.5.2
 posthog==3.0.1
 preshed==3.0.8
 prometheus-client==0.14.1
-protobuf==3.20.2
+proto-plus==1.22.2
+protobuf==4.23.0
 pvporcupine @ file:///Users/jordisaleilles/porcupine/binding/python
 py2neo==2021.2.3
 pyArango==2.0.1
 pyarrow==11.0.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+PyAutoGUI==0.9.53
 pybind11==2.2.4
 pycparser==2.21
 pydantic==1.10.5
+pygame==2.4.0
+PyGetWindow==0.0.9
 Pygments==2.14.0
 pyjsparser==2.7.1
 PyJWT==2.6.0
+PyMsgBox==1.0.9
+pyobjc==9.1.1
+pyobjc-core==9.1.1
+pyobjc-framework-Accounts==9.1.1
+pyobjc-framework-AddressBook==9.1.1
+pyobjc-framework-AdSupport==9.1.1
+pyobjc-framework-AppleScriptKit==9.1.1
+pyobjc-framework-AppleScriptObjC==9.1.1
+pyobjc-framework-ApplicationServices==9.1.1
+pyobjc-framework-AudioVideoBridging==9.1.1
+pyobjc-framework-AuthenticationServices==9.1.1
+pyobjc-framework-AutomaticAssessmentConfiguration==9.1.1
+pyobjc-framework-Automator==9.1.1
+pyobjc-framework-AVFoundation==9.1.1
+pyobjc-framework-AVKit==9.1.1
+pyobjc-framework-BusinessChat==9.1.1
+pyobjc-framework-CalendarStore==9.1.1
+pyobjc-framework-CFNetwork==9.1.1
+pyobjc-framework-CloudKit==9.1.1
+pyobjc-framework-Cocoa==9.1.1
+pyobjc-framework-Collaboration==9.1.1
+pyobjc-framework-ColorSync==9.1.1
+pyobjc-framework-Contacts==9.1.1
+pyobjc-framework-ContactsUI==9.1.1
+pyobjc-framework-CoreAudio==9.1.1
+pyobjc-framework-CoreAudioKit==9.1.1
+pyobjc-framework-CoreBluetooth==9.1.1
+pyobjc-framework-CoreData==9.1.1
+pyobjc-framework-CoreHaptics==9.1.1
+pyobjc-framework-CoreLocation==9.1.1
+pyobjc-framework-CoreMedia==9.1.1
+pyobjc-framework-CoreMediaIO==9.1.1
+pyobjc-framework-CoreMIDI==9.1.1
+pyobjc-framework-CoreML==9.1.1
+pyobjc-framework-CoreMotion==9.1.1
+pyobjc-framework-CoreServices==9.1.1
+pyobjc-framework-CoreSpotlight==9.1.1
+pyobjc-framework-CoreText==9.1.1
+pyobjc-framework-CoreWLAN==9.1.1
+pyobjc-framework-CryptoTokenKit==9.1.1
+pyobjc-framework-DeviceCheck==9.1.1
+pyobjc-framework-DictionaryServices==9.1.1
+pyobjc-framework-DiscRecording==9.1.1
+pyobjc-framework-DiscRecordingUI==9.1.1
+pyobjc-framework-DiskArbitration==9.1.1
+pyobjc-framework-DVDPlayback==9.1.1
+pyobjc-framework-EventKit==9.1.1
+pyobjc-framework-ExceptionHandling==9.1.1
+pyobjc-framework-ExecutionPolicy==9.1.1
+pyobjc-framework-ExternalAccessory==9.1.1
+pyobjc-framework-FileProvider==9.1.1
+pyobjc-framework-FileProviderUI==9.1.1
+pyobjc-framework-FinderSync==9.1.1
+pyobjc-framework-FSEvents==9.1.1
+pyobjc-framework-GameCenter==9.1.1
+pyobjc-framework-GameController==9.1.1
+pyobjc-framework-GameKit==9.1.1
+pyobjc-framework-GameplayKit==9.1.1
+pyobjc-framework-ImageCaptureCore==9.1.1
+pyobjc-framework-IMServicePlugIn==9.1.1
+pyobjc-framework-InputMethodKit==9.1.1
+pyobjc-framework-InstallerPlugins==9.1.1
+pyobjc-framework-InstantMessage==9.1.1
+pyobjc-framework-Intents==9.1.1
+pyobjc-framework-IOBluetooth==9.1.1
+pyobjc-framework-IOBluetoothUI==9.1.1
+pyobjc-framework-IOSurface==9.1.1
+pyobjc-framework-iTunesLibrary==9.1.1
+pyobjc-framework-LatentSemanticMapping==9.1.1
+pyobjc-framework-LaunchServices==9.1.1
+pyobjc-framework-libdispatch==9.1.1
+pyobjc-framework-libxpc==9.1.1
+pyobjc-framework-LinkPresentation==9.1.1
+pyobjc-framework-LocalAuthentication==9.1.1
+pyobjc-framework-MapKit==9.1.1
+pyobjc-framework-MediaAccessibility==9.1.1
+pyobjc-framework-MediaLibrary==9.1.1
+pyobjc-framework-MediaPlayer==9.1.1
+pyobjc-framework-MediaToolbox==9.1.1
+pyobjc-framework-Metal==9.1.1
+pyobjc-framework-MetalKit==9.1.1
+pyobjc-framework-MetalPerformanceShaders==9.1.1
+pyobjc-framework-ModelIO==9.1.1
+pyobjc-framework-MultipeerConnectivity==9.1.1
+pyobjc-framework-NaturalLanguage==9.1.1
+pyobjc-framework-NetFS==9.1.1
+pyobjc-framework-Network==9.1.1
+pyobjc-framework-NetworkExtension==9.1.1
+pyobjc-framework-NotificationCenter==9.1.1
+pyobjc-framework-OpenDirectory==9.1.1
+pyobjc-framework-OSAKit==9.1.1
+pyobjc-framework-OSLog==9.1.1
+pyobjc-framework-PencilKit==9.1.1
+pyobjc-framework-Photos==9.1.1
+pyobjc-framework-PhotosUI==9.1.1
+pyobjc-framework-PreferencePanes==9.1.1
+pyobjc-framework-PushKit==9.1.1
+pyobjc-framework-Quartz==9.1.1
+pyobjc-framework-QuickLookThumbnailing==9.1.1
+pyobjc-framework-SafariServices==9.1.1
+pyobjc-framework-SceneKit==9.1.1
+pyobjc-framework-ScreenSaver==9.1.1
+pyobjc-framework-ScriptingBridge==9.1.1
+pyobjc-framework-SearchKit==9.1.1
+pyobjc-framework-Security==9.1.1
+pyobjc-framework-SecurityFoundation==9.1.1
+pyobjc-framework-SecurityInterface==9.1.1
+pyobjc-framework-ServiceManagement==9.1.1
+pyobjc-framework-Social==9.1.1
+pyobjc-framework-SoundAnalysis==9.1.1
+pyobjc-framework-Speech==9.1.1
+pyobjc-framework-SpriteKit==9.1.1
+pyobjc-framework-StoreKit==9.1.1
+pyobjc-framework-SyncServices==9.1.1
+pyobjc-framework-SystemConfiguration==9.1.1
+pyobjc-framework-SystemExtensions==9.1.1
+pyobjc-framework-UserNotifications==9.1.1
+pyobjc-framework-VideoSubscriberAccount==9.1.1
+pyobjc-framework-VideoToolbox==9.1.1
+pyobjc-framework-Vision==9.1.1
+pyobjc-framework-WebKit==9.1.1
 pyparsing==3.0.9
+pyperclip==1.8.2
 PyPrind==2.11.3
+PyRect==0.2.0
 pyrsistent==0.19.3
+PyScreeze==0.1.28
 pySmartDL==1.3.4
 python-dateutil==2.8.2
 python-docx==0.8.11
 python-dotenv==1.0.0
 python-ptrace==0.9.8
+pytweening==1.0.7
 pytz==2022.7.1
 pytz-deprecation-shim==0.1.0.post0
 PyYAML==6.0
@@ -121,6 +267,8 @@ rapidfuzz==2.7.0
 regex==2022.10.31
 requests==2.28.2
 requests-oauthlib==1.3.1
+rsa==4.9
+rubicon-objc==0.4.6
 scikit-learn==1.0.2
 scipy==1.9.3
 sentence-transformers==2.2.2
